# git-sync

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  sync.py
.github/workflows/: ci.yml
tests/: test_sync.py
